--- a/missingkids/less/footer.less
+++ b/missingkids/less/footer.less
@@ -129,6 +129,8 @@
         padding-left: 0;
         float: left;
         position: absolute;
+        transition: all 0.1s ease-in;
+        left: 0;
         @media (min-width: @screen-sm) {
           position: static;
           float: right;
