--- a/missingkids/less/header.less
+++ b/missingkids/less/header.less
@@ -365,9 +365,12 @@
                   font-size: 20px;
                   padding-top: 2px;
                   position: relative;
+                  right: 0;
+                  transition: right 0.1s ease-in;
                   @media (min-width: @screen-sm) {
                     right: 16px;
                     bottom: -17px;
+                    position: static;
                   }
                   @media (min-width: @screen-md) {
                     padding-top: 5px;
@@ -425,7 +428,7 @@
                       .search-form{
                         position: relative;
                         display: inline-block;
-                        top: -5px;
+                        top: -4px;
                         right: 10px;
                         input[type='text'] {
                           min-width: 160px;
